fix jumbotron mobile display

--- a/css/style.css
+++ b/css/style.css
@@ -28,4 +28,10 @@ main .bg-jumbo {
         width: 100%;
         margin: auto;
     }
+
+    .width-class-60 {
+        width: 100%;
+        margin: auto;
+
+    }
 }
